# fluid-simulation

./: .gitignore  README.md
code/: CMakeLists.txt
code/CGL/include/CGL/: spectrum.h
code/glew/src/: visualinfo.c
code/src/: CMakeLists.txt  Cube.cpp  Particles.cpp  Particles.h  SolidSphere.cpp  fluid.cpp  fluid.h  main.cpp  particle.h  simulator.cpp  simulator.h
code/src/collision/: collisionObject.h  plane.cpp  plane.h  sphere.cpp  sphere.h
code/src/temp/: Particles.cpp  Particles.h
docs/: final_report.md  milestone.md  proposal.md
